<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/premiun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/premiun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="88dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/premiun"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/nameValue"
        android:layout_width="393dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName"
        app:layout_constraintVertical_bias="0.011"></EditText>



    <TextView
        android:id="@+id/sirName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SirName"
        android:maxLength="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@+id/nameValue"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/sirNameValue"
        android:layout_width="396dp"
        android:layout_height="49dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sirName"
        app:layout_constraintVertical_bias="0.02" />

    <RadioGroup
        android:id="@+id/botones"
        android:layout_width="332dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"
        android:clickable="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sirNameValue"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/boton1"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/señor"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/boton2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/señora" />

        <RadioButton
            android:id="@+id/boton3"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="@string/señorita" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/politely"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botones" />

    <Button
        android:id="@+id/greet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.186" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="365dp"
        android:layout_height="27dp"
        android:max="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greet"
        app:layout_constraintVertical_bias="0.224" />

    <TextView
        android:id="@+id/textFinal"
        android:layout_width="306dp"
        android:layout_height="69dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/textProgres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/textFinal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/icono"
        android:layout_width="50dp"
        android:layout_height="37dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sirNameValue"
        app:layout_constraintVertical_bias="0.628" />

    <TextView
        android:id="@+id/tamanoNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/sirNameValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toEndOf="@+id/sirName"
        app:layout_constraintTop_toBottomOf="@+id/nameValue"
        app:layout_constraintVertical_bias="0.344" />

    <TextView
        android:id="@+id/tamanoApell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/botones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sirNameValue"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>